# MFC_UnitTest

./: LICENSE  README.md  framework.h
MFCApplication1/gtest/: CMakeLists.txt  main.cpp
gtest/: CMakeCache.txt  CMakeLists.txt  build.ninja  cmake_install.cmake  test.cpp
gtest/googletest/lib/: gtest_main.lib
